add project plan in read me

--- a/proj.android/project.properties
+++ b/proj.android/project.properties
@@ -10,5 +10,5 @@
 # Project target.
 target=android-17
 
-android.library.reference.1=../../CCF/cocos2d/cocos/2d/platform/android/java
-android.library.reference.2=../../CCF_3_0_0_2511_Android/Intel(R) CCF SDK/Samples/inproc_lib
+android.library.reference.1=../cocos2d/cocos/2d/platform/android/java
+android.library.reference.2=../../../Documents/CCF_3_0_0_2511_Android/Intel(R) CCF SDK/Samples/inproc_lib
